--- a/SCME.UI/CustomControl/ListViewResults.xaml
+++ b/SCME.UI/CustomControl/ListViewResults.xaml
@@ -90,11 +90,11 @@
                     <Label Name="labelIlResult1"  Grid.Column="1" Grid.Row="5" Content="0"
                        HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize30}" Height="Auto" />
 
-                    <customControls:LabelWithIndex Content="VGNT" Grid.Column="0" Grid.Row="6" Height="Auto" />
-                    <Label Name="labelVgntResult1"  Grid.Column="1" Grid.Row="6" Content="0"
+                    <customControls:LabelWithIndex Content="UGNT, В" Grid.Column="0" Grid.Row="6" Height="Auto" />
+                    <Label Name="labelVgntResult1"  Grid.Column="1" Grid.Row="6"
                        HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize30}" Height="Auto" />
-                    <customControls:LabelWithIndex Content="IGNT" Grid.Column="0" Grid.Row="7" Height="Auto" />
-                    <Label Name="labelIgntResult1"  Grid.Column="1" Grid.Row="7" Content="0"
+                    <customControls:LabelWithIndex Content="IGNT, мА" Grid.Column="0" Grid.Row="7" Height="Auto" />
+                    <Label Name="labelIgntResult1"  Grid.Column="1" Grid.Row="7"
                        HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize30}" Height="Auto" />
 
 
