--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
@@ -1,121 +1,122 @@
 ﻿<Grid x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.BvtDataTemplate"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
+      xmlns:bvt="clr-namespace:SCME.Types.BVT;assembly=SCME.Types"
       xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-      xmlns:bvt="clr-namespace:SCME.Types.BVT;assembly=SCME.Types" 
-      mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=bvt:TestParameters}"
-      d:DesignHeight="450" d:DesignWidth="800">
+      xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
+      mc:Ignorable="d"
+      d:DataContext="{d:DesignInstance Type=bvt:TestParameters}"
+      d:DesignWidth="800" d:DesignHeight="450">
     <Grid.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml"/>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="180" SharedSizeGroup="Column0c" />
-        <ColumnDefinition Width="220" SharedSizeGroup="Column1c"/>
-        <ColumnDefinition Width="30" />
-        <ColumnDefinition Width="170" SharedSizeGroup="Column3c" />
-        <ColumnDefinition Width="220" SharedSizeGroup="Column4c"/>
-    </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
-        <RowDefinition Height="45" />
-        <RowDefinition Height="45" />
-        <RowDefinition Height="45" />
-        <RowDefinition Height="45" />
-        <RowDefinition Height="45" />
-        <RowDefinition Height="Auto" />
-        <RowDefinition Height="Auto" />
-        <RowDefinition Height="45" />
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
-    <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.TestType}" Foreground="Black"/>
-    <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource BvtTestTypes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding TestType}" />
-    <Label Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.CurrentLimit_mA}"  Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding CurrentLimit, StringFormat={}{0:N0}}" IsNumeric="True" Grid.Row="0" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitD_V}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}"  Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding VoltageLimitD}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}" IsNumeric="True" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}" Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding VoltageLimitR}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}" IsNumeric="True" Grid.Row="1" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.PlateTime_ms}"  Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding PlateTime}" IsNumeric="True" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Grid.Column="3" Grid.Row="2" Content="{x:Static res:Resources.Rampup_Vms}"  Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding RampUpVoltage}" IsNumeric="True" Grid.Row="2" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.StartVoltage_V}"  Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding StartVoltage}" IsNumeric="True" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Grid.Column="3" Grid.Row="3" Content="{x:Static res:Resources.Frequency_Hz}"  Foreground="Black"/>
-    <ComboBox Grid.Column="4" Grid.Row="3" ItemsSource="{Binding Source={StaticResource VoltageFrequency}}" SelectedValue="{Binding VoltageFrequency}" />
-    <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.FreqRate_Hz}"  Foreground="Black"/>
-    <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Source={StaticResource FrequencyDivisors}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding FrequencyDivisor}" />
-    <Label Grid.Column="3" Grid.Row="4" Content="{x:Static res:Resources.Mode}"  Foreground="Black"/>
-    <ComboBox Grid.Column="4" Grid.Row="4" ItemsSource="{Binding Source={StaticResource BvtMeasurementModes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding MeasurementMode}" />
-    <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.MinVdrm_V}"  Foreground="Black">
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto" MinWidth="180" SharedSizeGroup="Column0c"/>
+        <ColumnDefinition Width="Auto" MinWidth="220" SharedSizeGroup="Column1c"/>
+        <ColumnDefinition Width="30"/>
+        <ColumnDefinition Width="Auto" MinWidth="170" SharedSizeGroup="Column3c"/>
+        <ColumnDefinition Width="Auto" MinWidth="220" SharedSizeGroup="Column4c"/>
+    </Grid.ColumnDefinitions>
+    <Label Content="{x:Static res:Resources.TestType}" Grid.Row="0" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <ComboBox ItemsSource="{Binding Source={StaticResource BvtTestTypes}}" SelectedValue="{Binding TestType}" SelectedValuePath="Value" DisplayMemberPath="Key" Grid.Row="0" Grid.Column="1" Margin="0,5,0,0"/>
+    <Label Content="{x:Static res:Resources.CurrentLimit_mA}" Grid.Row="0" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding CurrentLimit}" IsNumeric="True" IsFloat="True" Minimum="{StaticResource MinIxRM_BVT}" Maximum="{StaticResource MaxIxRM_BVT}" Grid.Row="0" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.VoltageLimitD_V}" Grid.Row="1" Grid.Column="0" Margin="0,5,0,0" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding VoltageLimitD}" IsNumeric="True" Minimum="{StaticResource MinVxRM_BVT}" Maximum="{StaticResource MaxVxRM_BVT}" Grid.Row="1" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.VoltageLimitR_V}" Grid.Row="1" Grid.Column="3" Margin="0,5,0,0" Foreground="Black" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}"/>
+    <customControls:ValidatingTextBox Text="{Binding VoltageLimitR}" IsNumeric="True" Minimum="{StaticResource MinVxRM_BVT}" Maximum="{StaticResource MaxVxRM_BVT}" Grid.Row="1" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.PlateTime_ms}" Grid.Row="2" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding PlateTime}" IsNumeric="True" Minimum="{StaticResource MinPlateVxRM_BVT}" Maximum="{StaticResource MaxPlateVxRM_BVT}" Grid.Row="2" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.Rampup_Vms}" Grid.Row="2" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding RampUpVoltage}" IsNumeric="True" IsFloat="True" Minimum="{StaticResource MinRampVxRM_BVT}" Maximum="{StaticResource MaxRampVxRM_BVT}" Grid.Row="2" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.StartVoltage_V}" Grid.Row="3" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding StartVoltage}" IsNumeric="True" Minimum="{StaticResource MinStartVxRM_BVT}" Maximum="{StaticResource MaxStartVxRM_BVT}" Grid.Row="3" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.Frequency_Hz}" Grid.Row="3" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <ComboBox ItemsSource="{Binding Source={StaticResource VoltageFrequency}}" SelectedValue="{Binding VoltageFrequency}" Grid.Row="3" Grid.Column="4" Margin="0,5,0,0"/>
+    <Label Content="{x:Static res:Resources.FreqRate_Hz}" Grid.Row="4" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <ComboBox ItemsSource="{Binding Source={StaticResource FrequencyDivisors}}" SelectedValue="{Binding FrequencyDivisor}" SelectedValuePath="Value" DisplayMemberPath="Key" Grid.Row="4" Grid.Column="1" Margin="0,5,0,0"/>
+    <Label Content="{x:Static res:Resources.Mode}" Grid.Row="4" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <ComboBox ItemsSource="{Binding Source={StaticResource BvtMeasurementModes}}" SelectedValue="{Binding MeasurementMode}" SelectedValuePath="Value" DisplayMemberPath="Key" Grid.Row="4" Grid.Column="4" Margin="0,5,0,0"/>
+    <Label Content="{x:Static res:Resources.MinVdrm_V}" Grid.Row="5" Grid.Column="0" Margin="0,5,0,0" Foreground="Black">
         <Label.Visibility>
             <MultiBinding Converter="{StaticResource Vdrm2V}">
-                <Binding Path="MeasurementMode" />
-                <Binding Path="TestType" />
+                <Binding Path="MeasurementMode"/>
+                <Binding Path="TestType"/>
             </MultiBinding>
         </Label.Visibility>
     </Label>
-    <customControls:ValidatingTextBox Text="{Binding VDRM}" IsNumeric="True" Grid.Row="5" Grid.Column="1" Margin="0,5" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0">
+    <customControls:ValidatingTextBox Text="{Binding VDRM}" IsNumeric="True" IsFloat="True" Grid.Row="5" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0">
         <customControls:ValidatingTextBox.Visibility>
             <MultiBinding Converter="{StaticResource Vdrm2V}">
-                <Binding Path="MeasurementMode" />
-                <Binding Path="TestType" />
+                <Binding Path="MeasurementMode"/>
+                <Binding Path="TestType"/>
             </MultiBinding>
         </customControls:ValidatingTextBox.Visibility>
     </customControls:ValidatingTextBox>
-    <Label Grid.Column="3" Grid.Row="5" Content="{x:Static res:Resources.MinVrrm_V}"  Foreground="Black">
+    <Label Content="{x:Static res:Resources.MinVrrm_V}" Grid.Row="5" Grid.Column="3" Margin="0,5,0,0" Foreground="Black">
         <Label.Visibility>
             <MultiBinding Converter="{StaticResource Vrrm2V}">
-                <Binding Path="MeasurementMode" />
-                <Binding Path="TestType" />
+                <Binding Path="MeasurementMode"/>
+                <Binding Path="TestType"/>
             </MultiBinding>
         </Label.Visibility>
     </Label>
-    <customControls:ValidatingTextBox Text="{Binding VRRM}" IsNumeric="True" Grid.Row="5" Grid.Column="4" Margin="0,5" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0">
+    <customControls:ValidatingTextBox Text="{Binding VRRM}" IsNumeric="True" IsFloat="True" Grid.Row="5" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0">
         <customControls:ValidatingTextBox.Visibility>
             <MultiBinding Converter="{StaticResource Vrrm2V}">
-                <Binding Path="MeasurementMode" />
-                <Binding Path="TestType" />
+                <Binding Path="MeasurementMode"/>
+                <Binding Path="TestType"/>
             </MultiBinding>
         </customControls:ValidatingTextBox.Visibility>
     </customControls:ValidatingTextBox>
-    <Label Grid.Column="0" Grid.Row="6" Content="{x:Static res:Resources.MaxIdrm_mA}"  Foreground="Black">
+    <Label Content="{x:Static res:Resources.MaxIdrm_mA}" Grid.Row="6" Grid.Column="0" Margin="0,5,0,0" Foreground="Black">
         <Label.Visibility>
             <MultiBinding Converter="{StaticResource Idrm2V}">
-                <Binding Path="MeasurementMode" />
-                <Binding Path="TestType" />
+                <Binding Path="MeasurementMode"/>
+                <Binding Path="TestType"/>
             </MultiBinding>
         </Label.Visibility>
     </Label>
-    <customControls:ValidatingTextBox Text="{Binding IDRM, StringFormat={}{0:N0}}" IsNumeric="True" Grid.Row="6" Grid.Column="1" Margin="0,5" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0">
+    <customControls:ValidatingTextBox Text="{Binding IDRM}" IsNumeric="True" IsFloat="True" Grid.Row="6" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0">
         <customControls:ValidatingTextBox.Visibility>
             <MultiBinding Converter="{StaticResource Idrm2V}">
-                <Binding Path="MeasurementMode" />
-                <Binding Path="TestType" />
+                <Binding Path="MeasurementMode"/>
+                <Binding Path="TestType"/>
             </MultiBinding>
         </customControls:ValidatingTextBox.Visibility>
     </customControls:ValidatingTextBox>
-    <Label Grid.Column="3" Grid.Row="6" Content="{x:Static res:Resources.MaxIrrm_mA}"  Foreground="Black">
+    <Label Content="{x:Static res:Resources.MaxIrrm_mA}" Grid.Row="6" Grid.Column="3" Margin="0,5,0,0" Foreground="Black">
         <Label.Visibility>
             <MultiBinding Converter="{StaticResource Irrm2V}">
-                <Binding Path="MeasurementMode" />
-                <Binding Path="TestType" />
+                <Binding Path="MeasurementMode"/>
+                <Binding Path="TestType"/>
             </MultiBinding>
         </Label.Visibility>
     </Label>
-    <customControls:ValidatingTextBox Text="{Binding IRRM, StringFormat={}{0:N0}}" IsNumeric="True" Grid.Row="6" Grid.Column="4" Margin="0,5" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0">
+    <customControls:ValidatingTextBox Text="{Binding IRRM}" IsNumeric="True" IsFloat="True" Grid.Row="6" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0">
         <customControls:ValidatingTextBox.Visibility>
             <MultiBinding Converter="{StaticResource Irrm2V}">
-                <Binding Path="MeasurementMode" />
-                <Binding Path="TestType" />
+                <Binding Path="MeasurementMode"/>
+                <Binding Path="TestType"/>
             </MultiBinding>
         </customControls:ValidatingTextBox.Visibility>
     </customControls:ValidatingTextBox>
-    <CheckBox Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Content="{x:Static res:Resources.UseUdsmUrsm}" IsChecked="{Binding UseUdsmUrsm}"  Foreground="Black" BorderBrush="#FFC9C9C9"/>
+    <CheckBox Content="{x:Static res:Resources.UseUdsmUrsm}" IsChecked="{Binding UseUdsmUrsm}" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0" BorderBrush="#FFC9C9C9" Foreground="Black"/>
 </Grid>
