--- a/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
@@ -92,23 +92,15 @@
                             <profilesPageComponents:AddTestParameterUserControl x:Name="AddTestParameterUserControl" DataContext="{Binding ProfileDeepDataCopy}" HorizontalAlignment="Stretch" AddTestParametersEvent="AddTestParametersEvent_Click"/>
                         </Border>
                         <Border x:Name="HeightMeasure" BorderThickness="1" BorderBrush="#FFC9C9C9" Margin="10,10,10,0" IsEnabled="{Binding IsEditModeActive}" Visibility="{Binding ProfileVm.ProfileDeepDataCopy.IsHeightMeasureEnabled, ElementName=MainPage, Converter={StaticResource B2V}}">
-                            <Expander x:Name="HeightExpander" Style="{StaticResource CustomExpander}" Margin="10">
-                                <Expander.Header>
-                                    <DockPanel>
-                                        <Label Content="{x:Static res:Resources.Height}" Foreground="Black" Width="810"/>
-                                        <Button x:Name="DisableHeightMeasure" Style="{StaticResource ButtonWithIcon}" HorizontalAlignment="Right"
-                                        Visibility="{Binding Path=IsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Border}, Converter={StaticResource B2V}}" Click="DisableHeightMeasure_Click">
-                                            <Path Data="{StaticResource Delete}" Style="{StaticResource PathIcon}"/>
-                                        </Button>
-                                    </DockPanel>
-                                </Expander.Header>
-                                <CheckBox HorizontalAlignment="Left" Width="390" DataContext="{Binding ProfileDeepDataCopy}" Content="{x:Static res:Resources.MeasureDialog_Title}" BorderBrush="#FFC9C9C9" IsChecked="{Binding IsHeightMeasureEnabled}" IsHitTestVisible="False" Margin="0,10,0,0" FlowDirection="RightToLeft"/>
-                            </Expander>
+                            <DockPanel>
+                                <CheckBox HorizontalAlignment="Left" Width="390" DataContext="{Binding ProfileDeepDataCopy}" Content="{x:Static res:Resources.MeasureDialog_Title}" BorderBrush="#FFC9C9C9" IsChecked="{Binding IsHeightMeasureEnabled}" IsHitTestVisible="False" Margin="10,10,0,10" FlowDirection="RightToLeft"/>
+                                <Button x:Name="DisableHeightMeasure" Style="{StaticResource ButtonWithIcon}" Margin="10,0" HorizontalAlignment="Right" Visibility="{Binding Path=IsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Border}, Converter={StaticResource B2V}}" Click="DisableHeightMeasure_Click">
+                                    <Path Data="{StaticResource Delete}" Style="{StaticResource PathIcon}"/>
+                                </Button>
+                            </DockPanel>
                         </Border>
                     </StackPanel>
-
                     <profilesPageComponents:ListViewTestParametersUserControl ItemSource="{Binding ProfileDeepDataCopy.TestParametersAndNormatives}" Grid.Row="2" Margin="10,0,10,0" HorizontalContentAlignment="Stretch" ContentIsEnabled="{Binding IsEditModeActive}" VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.ScrollUnit="Pixel" PreviewMouseWheel="TestParametersListView_OnPreviewMouseWheel" Grid.ColumnSpan="2"/>
-
                 </Grid>
             </customControls:ScrollViewerLeftMouseButtonScroll>
             <Button Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Next}" Grid.Row="4" Grid.Column="0" Width="{Binding ActualWidth, ElementName=BackButton}" HorizontalAlignment="Right" Visibility="{Binding ButtonNextIsVisible, Converter={StaticResource B2V}}" Command="{Binding ButtonNextRelayCommand}"/>
