--- a/SCME.ProfileBuilder/MainWindow.xaml
+++ b/SCME.ProfileBuilder/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:res="clr-namespace:SCME.ProfileBuilder.Properties"
-        mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="924" Width="1366" Height="768"
+        mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="924" Width="1300" Height="768"
         Title="SCME.ProfileBuilder" Closing="Window_Closing"
-        ResizeMode="CanResize" Loaded="MetroWindow_Loaded"
+        ResizeMode="NoResize" Loaded="MetroWindow_Loaded"
         WindowStartupLocation="CenterScreen" 
          WindowState="Normal" Icon="App.ico" >
             <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" />
