--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
@@ -15,7 +15,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml"/>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml"/>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml"/>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Constraints.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
@@ -104,8 +104,8 @@
             <ColumnDefinition Width="Auto" MinWidth="220" SharedSizeGroup="Column4b"/>
         </Grid.ColumnDefinitions>
         <Label Content="{x:Static res:Resources.GateLimitV}" Grid.Row="0" Grid.Column="0" Foreground="Black" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}"/>
-        <customControls:ValidatingTextBox Text="{Binding GateLimitV}" IsNumeric="True" IsFloat="True" Grid.Row="0" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+        <customControls:ValidatingTextBox Text="{Binding VGNT}" IsNumeric="True" IsFloat="True" Grid.Row="0" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
         <Label Content="{x:Static res:Resources.GateLimitI}" Grid.Row="0" Grid.Column="3" Foreground="Black" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}"/>
-        <customControls:ValidatingTextBox Text="{Binding GateLimitI}" IsNumeric="True" IsFloat="True" Grid.Row="0" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+        <customControls:ValidatingTextBox Text="{Binding IGNT}" IsNumeric="True" IsFloat="True" Grid.Row="0" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
     </Grid>
 </Grid>
