--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/UdsmUrsmDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/UdsmUrsmDataTemplate.xaml
@@ -13,6 +13,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Constraints.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
